# RPi-local-voice-assistant

./: README.md  main.py  main_llama.py  pyproject.toml  stt_lib.py
